Fixed spacing bug on info pages. Fixed fax number. Added favicon.

--- a/static/pages/small-header.css
+++ b/static/pages/small-header.css
@@ -3,5 +3,5 @@
     background: no-repeat;
     background-size: cover;
     background-position: center;
-    height: 49vh;
+    height: 43vh;
 }
